zellij-integration-tests/tests/snapshots/nested_sessions__key_after_ascend_lands_in_host.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_end_state)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +      Alt <[]>  VERTICAL  │$
      Pane #1                │     Pane #2                 │
$                            │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
 Descend: Ctrl + <o> + <[>                                 │
───────────────────────────────────────────────────────────┤
                           Pane #3                         │
$ █                                                        │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
