zellij-integration-tests/tests/snapshots/nested_sessions__key_after_descend_lands_in_guest.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&guest_end_state)
---
 Zellij (test)  Tab #1  + 
    Pane #1                  │   Pane #2
$                            │█
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
 Ctrl + g  p  t  n  h  s  o  q         ...
